# twelve-dps-starter-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  cosign.key.env  cosign.pub.env  op.env  op.nonprod.env
.circleci/: config.yml
.github/workflows/: docker-publish.yml  image-layer-pr.yaml  pull_request.yml  release.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
deployment/: values-dev.yaml  values-local.yaml  values-sandbox.yaml
manifests/: deployment.yaml
src/: main.rs
tpl/: kubeconfig.tpl
